Fixed load more button on chemical records and shift reports.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -398,3 +398,7 @@ legend{
 #popover-width {
   width: 225px;
 }
+
+.load-more-width {
+  width: 200px;
+}
